Fix buttons overflowing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -74,6 +74,6 @@ img {
   background: #FFFFFF !important;
 }
 
-.inner header {
+#header_wrap .inner header {
     max-width: none;
 }
